--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <a href="#contact">Kontakt</a>
   </nav>
   <div class="header-controls">
+    <a class="top-cta" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">LinkedIn</a>
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
       <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇬🇧</button>
@@ -290,11 +291,6 @@
   </div>
 
   <p class="place"><span class="de-only">Standort:</span><span class="en-only">Location:</span> Mastershausen – Koblenz, DE</p>
-
-  <div class="contact-actions">
-    <a id="contact-linkedin-btn" class="btn ghost de-only" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">LinkedIn öffnen</a>
-    <a id="contact-linkedin-btn-en" class="btn ghost en-only" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">Open LinkedIn</a>
-  </div>
 
   <p class="tiny">© <span id="year"></span> · <span class="de-only">Alle Rechte vorbehalten.</span><span class="en-only">All rights reserved.</span></p>
   <div class="qr-box">
