--- a/index.html
+++ b/index.html
@@ -29,20 +29,8 @@
     {
       "@context":"https://schema.org",
       "@graph":[
-        {
-          "@type":"WebSite",
-          "name":"Vitalijs Ivanovs Praktikum",
-          "url":"",
-          "inLanguage":["de","en"],
-          "potentialAction":{"@type":"SearchAction","target":"","query-input":"required name=search_term"}
-        },
-        {
-          "@type":"Person",
-          "name":"Vitalijs Ivanovs",
-          "email":"mailto:mr.vetaleg@gmail.com",
-          "url":"",
-          "sameAs":["https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/"]
-        }
+        {"@type":"WebSite","name":"Vitalijs Ivanovs Praktikum","url":"","inLanguage":["de","en"],"potentialAction":{"@type":"SearchAction","target":"","query-input":"required name=search_term"}},
+        {"@type":"Person","name":"Vitalijs Ivanovs","email":"mailto:mr.vetaleg@gmail.com","url":"","sameAs":["https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/"]}
       ]
     }
   </script>
@@ -62,7 +50,10 @@
     <a href="#contact">Kontakt</a>
   </nav>
   <div class="header-controls">
-    <a class="top-cta" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">LinkedIn</a>
+    <a class="top-cta" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener" aria-label="LinkedIn">
+      <svg aria-hidden="true" viewBox="0 0 24 24" class="in-ico"><path d="M4.98 3.5A2.5 2.5 0 1 1 0 3.5a2.5 2.5 0 0 1 4.98 0zM.5 8h4.9v16H.5V8zm7.5 0h4.7v2.2h.1c.7-1.3 2.4-2.6 5-2.6 5.3 0 6.3 3.5 6.3 8.1V24h-4.9v-7.1c0-1.7 0-3.9-2.4-3.9-2.4 0-2.8 1.8-2.8 3.8V24H8V8z"/></svg>
+      <span class="txt">LinkedIn</span>
+    </a>
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
       <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇬🇧</button>
