Update index, styles and script

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de" data-theme="auto">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, interactive-widget=resizes-content" />
   <title>Vitalijs Ivanovs Praktikum</title>
   <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
   <meta property="og:type" content="website">
