update: index.html, styles.css, script.js, print.css, 404.html, 500.html, impressum.html, manifest.webmanifest, sw.js, robots.txt

--- a/index.html
+++ b/index.html
@@ -1,39 +1,30 @@
 <!doctype html>
 <html lang="de" data-theme="auto">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, interactive-widget=resizes-content" />
-  <title>Vitalijs Ivanovs Praktikum</title>
-  <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="robots" content="noindex,nofollow">
+  <title>Vitalijs Ivanovs · Praktikum 2026</title>
+  <meta name="description" content="Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung ab April 2026. Lebenslauf, Anschreiben, Projekte, Zertifikate.">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Vitalijs Ivanovs Praktikum">
-  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
+  <meta property="og:title" content="Vitalijs Ivanovs · Praktikum 2026">
+  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate.">
   <meta property="og:image" content="assets/og.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Vitalijs Ivanovs Praktikum">
-  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
+  <meta name="twitter:title" content="Vitalijs Ivanovs · Praktikum 2026">
+  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate.">
   <meta name="twitter:image" content="assets/og.jpg">
-  <meta name="theme-color" content="#0b0d12">
-  <link rel="canonical" href="">
-  <link rel="alternate" hreflang="de" href="">
-  <link rel="alternate" hreflang="en" href="">
+  <meta name="theme-color" content="#0aa1a7">
   <link rel="icon" href="favicon.ico?v=3">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=3">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=3">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3">
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <script type="application/ld+json">
-    {
-      "@context":"https://schema.org",
-      "@graph":[
-        {"@type":"WebSite","name":"Vitalijs Ivanovs Praktikum","url":"","inLanguage":["de","en"],"potentialAction":{"@type":"SearchAction","target":"","query-input":"required name=search_term"}},
-        {"@type":"Person","name":"Vitalijs Ivanovs","email":"mailto:mr.vetaleg@gmail.com","url":"","sameAs":["https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/"]}
-      ]
-    }
-  </script>
+  <link rel="stylesheet" href="print.css" media="print">
 </head>
 <body data-lang="de">
 <header class="topbar" role="banner">
@@ -50,10 +41,7 @@
     <a href="#contact">Kontakt</a>
   </nav>
   <div class="header-controls">
-    <a class="top-cta" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener" aria-label="LinkedIn">
-      <svg aria-hidden="true" viewBox="0 0 24 24" class="in-ico"><path d="M4.98 3.5A2.5 2.5 0 1 1 0 3.5a2.5 2.5 0 0 1 4.98 0zM.5 8h4.9v16H.5V8zm7.5 0h4.7v2.2h.1c.7-1.3 2.4-2.6 5-2.6 5.3 0 6.3 3.5 6.3 8.1V24h-4.9v-7.1c0-1.7 0-3.9-2.4-3.9-2.4 0-2.8 1.8-2.8 3.8V24H8V8z"/></svg>
-      <span class="txt">LinkedIn</span>
-    </a>
+    <a class="btn ghost small" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">LinkedIn</a>
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
       <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇬🇧</button>
@@ -68,22 +56,19 @@
 </header>
 
 <section class="hero" aria-label="Hero">
-  <div class="hero-media" aria-hidden="true">
-    <div class="grid">
-      <img src="assets/1.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/2.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/3.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/4.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/5.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/6.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/7.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/8.jpg" alt="" loading="lazy" width="1600" height="900">
-      <img src="assets/9.jpg" alt="" loading="lazy" width="1600" height="900">
-    </div>
-  </div>
   <h1 class="brand" tabindex="0"><span>B</span><span>E</span><span>W</span><span>E</span><span>R</span><span>B</span><span>U</span><span>N</span><span>G</span></h1>
   <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung</p>
-  <a href="#docs" class="cta">Unterlagen ansehen</a>
+  <div class="hero-grid">
+    <img src="assets/1.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/2.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/3.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/4.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/5.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/6.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/7.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/8.jpg" alt="" loading="lazy" width="1600" height="900">
+    <img src="assets/9.jpg" alt="" loading="lazy" width="1600" height="900">
+  </div>
 </section>
 
 <main>
@@ -230,60 +215,45 @@
   <h2 id="contact-heading" class="de-only">Kontakt</h2>
   <h2 class="en-only">Contact</h2>
 
-  <form action="https://formspree.io/f/mandzzal" method="POST" class="contact-form" novalidate>
+  <form action="https://formspree.io/f/mandzzal" method="POST" class="contact-form" id="contactForm" novalidate>
     <div class="form-grid">
       <div class="field">
         <label for="cf-name" class="de-only">Name</label>
         <label for="cf-name" class="en-only">Name</label>
-        <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" required placeholder="Vor- und Nachname" aria-describedby="hint-name-de hint-name-en">
-        <p id="hint-name-de" class="hint de-only">Vor- und Nachname.</p>
-        <p id="hint-name-en" class="hint en-only">First and last name.</p>
+        <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" placeholder="Vor- und Nachname." required>
       </div>
       <div class="field">
         <label for="cf-email" class="de-only">E-Mail</label>
-        <label for="cf-email" class="en-only">Email</label>
-        <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" required placeholder="name@firma.de" aria-describedby="hint-mail-de hint-mail-en">
-        <p id="hint-mail-de" class="hint de-only">Beispiel: name@firma.de</p>
-        <p id="hint-mail-en" class="hint en-only">Example: name@company.com</p>
+        <label for="cf-email" class="en-only">E-mail</label>
+        <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" placeholder="name@firma.de" required>
+      </div>
+      <div class="field field-wide">
+        <label for="cf-message" class="de-only">Nachricht</label>
+        <label for="cf-message" class="en-only">Message</label>
+        <textarea id="cf-message" name="message" minlength="10" placeholder="Mindestens 10 Zeichen" required></textarea>
       </div>
     </div>
-
-    <div class="field">
-      <label for="cf-message" class="de-only">Nachricht</label>
-      <label for="cf-message" class="en-only">Message</label>
-      <textarea id="cf-message" name="message" rows="7" required placeholder="Ihre Nachricht..." aria-describedby="hint-msg-de hint-msg-en"></textarea>
-      <p id="hint-msg-de" class="hint de-only">Mindestens 10 Zeichen</p>
-      <p id="hint-msg-en" class="hint en-only">At least 10 characters</p>
-    </div>
-
-    <input type="text" id="cf-website" name="website" tabindex="-1" autocomplete="off" class="hp">
-
-    <div class="field check">
-      <label class="checklab">
-        <input id="cf-consent" name="consent" type="checkbox" required>
-        <span class="de-only">Ich stimme der Verarbeitung meiner Angaben zur Kontaktaufnahme zu.</span>
-        <span class="en-only">I agree to the processing of my data for contacting me.</span>
-      </label>
-    </div>
-
+    <input type="text" id="cf-website" name="_gotcha" class="hp" tabindex="-1" autocomplete="off">
+    <label class="checklab" for="cf-consent"><input id="cf-consent" class="check" type="checkbox" name="consent" required><span class="de-only">Ich stimme der Verarbeitung meiner Angaben zur Kontaktaufnahme zu.</span><span class="en-only">I consent to processing my data for contacting me.</span></label>
     <div class="actions">
-      <button type="submit" class="btn" id="cf-submit">Senden</button>
+      <button type="submit" class="btn" id="send-btn">Senden</button>
       <button type="reset" class="btn ghost" id="cf-reset">Reset</button>
+      <span id="cf-status" class="status" aria-live="polite"></span>
     </div>
   </form>
 
   <div class="email-row">
-    <span class="de-only">E-Mail:</span><span class="en-only">Email:</span>
     <div class="email-wrap">
       <a id="mailto-link" href="mailto:mr.vetaleg@gmail.com">mr.vetaleg@gmail.com</a>
-      <button id="copy-email" class="btn ghost small" type="button" aria-describedby="copy-tip">Kopieren</button>
-      <span id="copy-tip" role="tooltip" class="tooltip">In die Zwischenablage</span>
+      <button id="copy-email" class="btn ghost small" type="button">Kopieren</button>
+      <span class="tooltip" role="status" aria-live="polite">Kopiert</span>
     </div>
   </div>
 
   <p class="place"><span class="de-only">Standort:</span><span class="en-only">Location:</span> Mastershausen – Koblenz, DE</p>
 
   <p class="tiny">© <span id="year"></span> · <span class="de-only">Alle Rechte vorbehalten.</span><span class="en-only">All rights reserved.</span></p>
+
   <div class="qr-box">
     <p class="de-only">📱 Scanne den QR-Code für schnellen Zugriff:</p>
     <p class="en-only">📱 Scan the QR code for quick access:</p>
@@ -294,6 +264,7 @@
 <div id="pdfModal" class="modal" aria-hidden="true">
   <div class="modal-content" role="dialog" aria-modal="true" aria-label="Preview">
     <button class="close" type="button" aria-label="Close" title="Close">&times;</button>
+    <div id="pdfStatus" class="modal-status" aria-live="polite"></div>
     <iframe id="pdfFrame" src="" title="Dokument" loading="lazy"></iframe>
   </div>
 </div>
@@ -306,5 +277,8 @@
 <button id="backToTop" aria-label="Nach oben">↑</button>
 
 <script src="script.js"></script>
+<script>
+  if("serviceWorker" in navigator){navigator.serviceWorker.register("./sw.js").catch(()=>{});}
+</script>
 </body>
 </html>
