--- a/500.html
+++ b/500.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fehler · 500</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="print.css" media="print">
 </head>
 <body data-lang="de">
 <main class="section" style="text-align:center;max-width:760px">
