update: index.html, styles.css, script.js, print.css, 404.html, 500.html, impressum.html, manifest.webmanifest, sw.js, robots.txt

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     <a href="#contact">Kontakt</a>
   </nav>
   <div class="header-controls">
-    <a class="btn ghost small" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">LinkedIn</a>
+    <a class="linkedin" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">
+      <span class="linkedin-text">LinkedIn</span>
+      <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+        <path d="M19 0H5C2.24 0 0 2.24 0 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5V5c0-2.76-2.24-5-5-5zM8 19H5V9h3v10zM6.5 7.73C5.54 7.73 4.77 6.95 4.77 6s.77-1.73 1.73-1.73S8.23 5.05 8.23 6 7.46 7.73 6.5 7.73zM20 19h-3v-5.6c0-1.34-.02-3.06-1.87-3.06-1.87 0-2.16 1.46-2.16 2.96V19h-3V9h2.88v1.37h.04c.4-.75 1.38-1.54 2.85-1.54 3.05 0 3.62 2.01 3.62 4.62V19z"/>
+      </svg>
+    </a>
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
       <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">🇬🇧</button>
