update: index.html, styles.css, script.js, print.css, 404.html, 500.html, impressum.html, manifest.webmanifest, sw.js, robots.txt

--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!doctype html>
 <html lang="de" data-theme="auto">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="robots" content="noindex,nofollow">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="noindex,nofollow" />
   <title>Vitalijs Ivanovs · Praktikum 2026</title>
-  <meta name="description" content="Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung ab April 2026. Lebenslauf, Anschreiben, Projekte, Zertifikate.">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Vitalijs Ivanovs · Praktikum 2026">
-  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate.">
-  <meta property="og:image" content="assets/og.jpg">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Vitalijs Ivanovs · Praktikum 2026">
-  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate.">
-  <meta name="twitter:image" content="assets/og.jpg">
-  <meta name="theme-color" content="#0aa1a7">
-  <link rel="icon" href="favicon.ico?v=3">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=3">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=3">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3">
+  <meta name="description" content="Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung (IHK) ab April 2026. Lebenslauf, Anschreiben, Projekte, Zertifikate." />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Vitalijs Ivanovs · Praktikum 2026" />
+  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate." />
+  <meta property="og:image" content="assets/og.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Vitalijs Ivanovs · Praktikum 2026" />
+  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate." />
+  <meta name="theme-color" content="#0b0d12" />
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="print.css" media="print">
 </head>
 <body data-lang="de">
 <header class="topbar" role="banner">
@@ -42,10 +39,7 @@
   </nav>
   <div class="header-controls">
     <a class="linkedin" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">
-      <span class="linkedin-text">LinkedIn</span>
-      <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-        <path d="M19 0H5C2.24 0 0 2.24 0 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5V5c0-2.76-2.24-5-5-5zM8 19H5V9h3v10zM6.5 7.73C5.54 7.73 4.77 6.95 4.77 6s.77-1.73 1.73-1.73S8.23 5.05 8.23 6 7.46 7.73 6.5 7.73zM20 19h-3v-5.6c0-1.34-.02-3.06-1.87-3.06-1.87 0-2.16 1.46-2.16 2.96V19h-3V9h2.88v1.37h.04c.4-.75 1.38-1.54 2.85-1.54 3.05 0 3.62 2.01 3.62 4.62V19z"/>
-      </svg>
+      <span class="linkedin-icon">in</span><span class="linkedin-text">LinkedIn</span>
     </a>
     <div class="lang-switch" aria-label="Language">
       <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">🇩🇪</button>
@@ -61,27 +55,16 @@
 </header>
 
 <section class="hero" aria-label="Hero">
-  <h1 class="brand" tabindex="0"><span>B</span><span>E</span><span>W</span><span>E</span><span>R</span><span>B</span><span>U</span><span>N</span><span>G</span></h1>
-  <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung</p>
-  <div class="hero-grid">
-    <img src="assets/1.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/2.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/3.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/4.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/5.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/6.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/7.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/8.jpg" alt="" loading="lazy" width="1600" height="900">
-    <img src="assets/9.jpg" alt="" loading="lazy" width="1600" height="900">
-  </div>
+  <h1 class="brand" tabindex="0">BEWERBUNG</h1>
+  <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung (IHK)</p>
 </section>
 
 <main>
   <section id="about" class="section" role="region" aria-labelledby="about-heading">
     <h2 id="about-heading" class="de-only">Über mich</h2>
     <h2 class="en-only">About me</h2>
-    <p class="de-only">Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben. Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.</p>
-    <p class="en-only">I am currently retraining as an IT specialist in application development and I am looking for a mandatory internship starting April 2026. I gained skills in Java, Python, web (HTML, CSS, JavaScript) and databases. I want hands-on experience in a professional environment.</p>
+    <p class="de-only">Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Kenntnisse: Java, Python, HTML, CSS, JavaScript und Datenbanken.</p>
+    <p class="en-only">I am retraining as an IT specialist in application development and I am looking for a mandatory internship starting April 2026. Skills: Java, Python, HTML, CSS, JavaScript and databases.</p>
   </section>
 
   <section id="cv" class="section" role="region" aria-labelledby="cv-heading">
@@ -101,14 +84,11 @@
         <p class="en-only">Personal projects in web development, API design, automation and UIs.</p>
       </article>
     </div>
-    <a class="btn ghost de-only" href="#docs">Kompletter Lebenslauf unten</a>
-    <a class="btn ghost en-only" href="#docs">Full résumé below</a>
   </section>
 
   <section id="docs" class="section" role="region" aria-labelledby="docs-heading">
     <h2 id="docs-heading" class="de-only">Unterlagen</h2>
     <h2 class="en-only">Documents</h2>
-
     <div class="cards">
       <article class="card de-only">
         <h3>Anschreiben (DE)</h3>
@@ -221,30 +201,28 @@
   <h2 class="en-only">Contact</h2>
 
   <form action="https://formspree.io/f/mandzzal" method="POST" class="contact-form" id="contactForm" novalidate>
-    <div class="form-grid">
-      <div class="field">
-        <label for="cf-name" class="de-only">Name</label>
-        <label for="cf-name" class="en-only">Name</label>
-        <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" placeholder="Vor- und Nachname." required>
-      </div>
-      <div class="field">
-        <label for="cf-email" class="de-only">E-Mail</label>
-        <label for="cf-email" class="en-only">E-mail</label>
-        <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" placeholder="name@firma.de" required>
-      </div>
-      <div class="field field-wide">
-        <label for="cf-message" class="de-only">Nachricht</label>
-        <label for="cf-message" class="en-only">Message</label>
-        <textarea id="cf-message" name="message" minlength="10" placeholder="Mindestens 10 Zeichen" required></textarea>
-      </div>
+    <div class="field">
+      <label for="cf-name" class="de-only">Name</label>
+      <label for="cf-name" class="en-only">Name</label>
+      <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" placeholder="Vor- und Nachname." required>
     </div>
-    <input type="text" id="cf-website" name="_gotcha" class="hp" tabindex="-1" autocomplete="off">
-    <label class="checklab" for="cf-consent"><input id="cf-consent" class="check" type="checkbox" name="consent" required><span class="de-only">Ich stimme der Verarbeitung meiner Angaben zur Kontaktaufnahme zu.</span><span class="en-only">I consent to processing my data for contacting me.</span></label>
+    <div class="field">
+      <label for="cf-email" class="de-only">E-Mail</label>
+      <label for="cf-email" class="en-only">E-mail</label>
+      <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" placeholder="name@firma.de" required>
+    </div>
+    <div class="field">
+      <label for="cf-message" class="de-only">Nachricht</label>
+      <label for="cf-message" class="en-only">Message</label>
+      <textarea id="cf-message" name="message" minlength="10" placeholder="Mindestens 10 Zeichen" required></textarea>
+    </div>
+    <input id="cf-website" type="text" name="_gotcha" class="hp" tabindex="-1" autocomplete="off">
+    <label class="checklab"><input id="cf-consent" class="check" type="checkbox" name="consent" required><span class="de-only">Ich stimme der Verarbeitung meiner Angaben zur Kontaktaufnahme zu.</span><span class="en-only">I consent to processing my data for contacting me.</span></label>
     <div class="actions">
       <button type="submit" class="btn" id="send-btn">Senden</button>
       <button type="reset" class="btn ghost" id="cf-reset">Reset</button>
-      <span id="cf-status" class="status" aria-live="polite"></span>
     </div>
+    <p id="cf-status" class="status" aria-live="polite"></p>
   </form>
 
   <div class="email-row">
@@ -268,8 +246,8 @@
 
 <div id="pdfModal" class="modal" aria-hidden="true">
   <div class="modal-content" role="dialog" aria-modal="true" aria-label="Preview">
-    <button class="close" type="button" aria-label="Close" title="Close">&times;</button>
-    <div id="pdfStatus" class="modal-status" aria-live="polite"></div>
+    <div id="pdfStatus" class="modal-status"></div>
+    <button class="close" type="button" aria-label="Close" title="Close">×</button>
     <iframe id="pdfFrame" src="" title="Dokument" loading="lazy"></iframe>
   </div>
 </div>
@@ -282,8 +260,5 @@
 <button id="backToTop" aria-label="Nach oben">↑</button>
 
 <script src="script.js"></script>
-<script>
-  if("serviceWorker" in navigator){navigator.serviceWorker.register("./sw.js").catch(()=>{});}
-</script>
 </body>
 </html>
