update: index.html, styles.css, script.js, print.css, 404.html, 500.html, impressum.html, manifest.webmanifest, sw.js, robots.txt

--- a/index.html
+++ b/index.html
@@ -204,17 +204,17 @@
     <div class="field">
       <label for="cf-name" class="de-only">Name</label>
       <label for="cf-name" class="en-only">Name</label>
-      <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" placeholder="Vor- und Nachname." required>
+      <input id="cf-name" name="name" type="text" inputmode="text" autocomplete="name" required>
     </div>
     <div class="field">
       <label for="cf-email" class="de-only">E-Mail</label>
       <label for="cf-email" class="en-only">E-mail</label>
-      <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" placeholder="name@firma.de" required>
+      <input id="cf-email" name="email" type="email" inputmode="email" autocomplete="email" required>
     </div>
     <div class="field">
       <label for="cf-message" class="de-only">Nachricht</label>
       <label for="cf-message" class="en-only">Message</label>
-      <textarea id="cf-message" name="message" minlength="10" placeholder="Mindestens 10 Zeichen" required></textarea>
+      <textarea id="cf-message" name="message" minlength="10" required></textarea>
     </div>
     <input id="cf-website" type="text" name="_gotcha" class="hp" tabindex="-1" autocomplete="off">
     <label class="checklab"><input id="cf-consent" class="check" type="checkbox" name="consent" required><span class="de-only">Ich stimme der Verarbeitung meiner Angaben zur Kontaktaufnahme zu.</span><span class="en-only">I consent to processing my data for contacting me.</span></label>
